created new files and trying some sort of styling with bem and %

--- a/old_style.css
+++ b/old_style.css
@@ -134,7 +134,7 @@ nav {
 }
 
 
-@media screen and (max-width: 775px) {
+@media screen and (min-width: 775px) {
     .container {
         display: flex;
         flex-direction: column-reverse;
