--- a/new_style.css
+++ b/new_style.css
@@ -38,7 +38,7 @@ svg {
 body {
     font-family: var(--font-family-body);
     font-size: var(--font-size-paragraph);
-    max-width: 1620px;
+    max-width: 100%;
     height: 100vh;
     margin: auto;
 }
