--- a/new_style.css
+++ b/new_style.css
@@ -38,8 +38,7 @@ svg {
 body {
     font-family: var(--font-family-body);
     font-size: var(--font-size-paragraph);
-    max-width: 100%;
-    height: 100vh;
+    max-width: 1320px;
     margin: auto;
 }
 
@@ -125,7 +124,7 @@ nav {
         justify-content: center;
 
         margin: 0 10%;
-        gap: 100px;
+        
 
     }
 
@@ -168,6 +167,6 @@ nav {
     }
 
     .right-section img {
-        min-width: 100%;
+        max-width: 75%;
     }
 }
